ontampa-devs/ctfd/templates/kind-namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ctfd
  labels:
    app.kubernetes.io/part-of: ctfd
