ontampa-devs/ctfd/templates/kind-route.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ctfd
  namespace: ontampa-devs-ctfd
  labels:
    app: ctfd
  annotations:
    haproxy.router.openshift.io/timeout: 120s
spec:
  host: ctfd-ontampa-devs-ctfd.apps.gaspar.ontampa.dev
  to:
    kind: Service
    name: ctfd
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
